<resources>
    <!--Activity titles-->
    <string name="app_name">Tides</string>
    <string name="title_map">Select Location</string>

    <!--Settings-->
    <string name="pref_location_key">location</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_location_default">5cebf1de3d0f4a073c4bb935</string>
    <string name="location_default_timezone">America/Vancouver</string>

    <string name="pref_show_sunrise_key">show_sunrise</string>
    <string name="pref_show_sunrise_title">Show Sunrise/Sunset</string>
    <!--<string name="pref_show_runrise_default">false</string>--> // Value stored in bools.xml
    <string name="pref_show_sunrise_summary_off">Not showing sunrise &amp; sunset</string>
    <string name="pref_show_sunrise_summary_on">Showing sunrise &amp; sunset</string>

    <string name="pref_wifi_only_key">wifi_only</string>
    <string name="pref_wifi_only_title">Wifi Only</string>
    <!--default value stored in bools.xml-->
    <string name="pref_wifi_only_summary_off">Mobile data usage is allowed</string>
    <string name="pref_wifi_only_summary_on">Only wifi data usage is allowed</string>


    <!--Menu item labels-->
    <string name="action_settings">Settings</string>
    <string name="action_map">Edit Location</string>

    <!--Date formats-->
    <string name="format_date_days_only">yyyy-MM-dd</string>
    <string name="format_date_hours_and_seconds">HH:mm</string>
    <string name="format_date_date_and_time">yyyy-MM-dd HH:mm:ss</string>
    <string name="format_date_weekday_date_and_time">EEE, MMM d yyyy HH:mm:ss Z</string>
    <string name="format_date_weekday_date">EEE, MMM d yyyy</string>

    <!--Component labels-->
    <string name="button_select_location">Select Location</string>
    <string name="map_station_id_title">Station ID:</string>

    <!--Error codes-->
    <string name="prediction_error_network" translatable="true">Network error. Unable to retrieve tide data from webservice.</string>
    <string name="content_description_sync_error_imageview">SyncError</string>

</resources>
